--- a/UI/LopHoc/UI_LopHoc.form
+++ b/UI/LopHoc/UI_LopHoc.form
@@ -40,9 +40,9 @@
                       <Component id="txtTimLop" min="-2" pref="250" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="ckLopDong" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="474" max="-2" attributes="0"/>
-                      <Component id="btnChiTietLop" min="-2" pref="35" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
+                      <Component id="btnChiTietLop" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="200" max="-2" attributes="0"/>
                       <Component id="btnThemLop" min="-2" pref="35" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="btnCapNhatLop" min="-2" pref="35" max="-2" attributes="0"/>
@@ -57,19 +57,27 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
-              <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="btnChiTietLop" alignment="1" min="-2" pref="35" max="-2" attributes="0"/>
-                  <Group type="103" alignment="1" groupAlignment="3" attributes="0">
-                      <Component id="txtTimLop" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
-                      <Component id="lblTimLop" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
-                      <Component id="ckLopDong" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Group type="103" alignment="1" groupAlignment="3" attributes="0">
+                              <Component id="txtTimLop" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
+                              <Component id="lblTimLop" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
+                              <Component id="ckLopDong" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Component id="btnThemLop" alignment="1" min="-2" pref="35" max="-2" attributes="0"/>
+                          <Component id="btnCapNhatLop" alignment="1" min="-2" pref="35" max="-2" attributes="0"/>
+                          <Component id="btnXoaLop" alignment="1" min="-2" pref="35" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="btnThemLop" alignment="1" min="-2" pref="35" max="-2" attributes="0"/>
-                  <Component id="btnCapNhatLop" alignment="1" min="-2" pref="35" max="-2" attributes="0"/>
-                  <Component id="btnXoaLop" alignment="1" min="-2" pref="35" max="-2" attributes="0"/>
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="btnChiTietLop" min="-2" pref="54" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
               <Component id="jspLH" min="-2" pref="535" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -158,6 +166,10 @@
         </Property>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/images/chitietlop.png"/>
+        </Property>
+        <Property name="toolTipText" type="java.lang.String" value="Chi Ti&#x1ebf;t L&#x1edb;p"/>
+        <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+          <Border info="null"/>
         </Property>
         <Property name="contentAreaFilled" type="boolean" value="false"/>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
