--- a/UI/UI_Main.form
+++ b/UI/UI_Main.form
@@ -88,7 +88,7 @@
                   <Component id="btnChuongTrinh" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="80" max="-2" attributes="0"/>
                   <Component id="btnTaiKhoan" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
