--- a/UI/LopHoc/UI_LopHoc.form
+++ b/UI/LopHoc/UI_LopHoc.form
@@ -203,12 +203,13 @@
               <Font name="Tahoma" size="12" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="8" rowCount="0">
+              <Table columnCount="9" rowCount="0">
                 <Column editable="false" title="STT" type="java.lang.String"/>
                 <Column editable="false" title="M&#xe3; L&#x1edb;p" type="java.lang.String"/>
                 <Column editable="false" title="T&#xea;n L&#x1edb;p" type="java.lang.String"/>
                 <Column editable="false" title="Ch&#x1b0;&#x1a1;ng Tr&#xec;nh" type="java.lang.String"/>
                 <Column editable="false" title="B&#x1eaf;t &#x110;&#x1ea7;u" type="java.lang.String"/>
+                <Column editable="true" title="" type="java.lang.Object"/>
                 <Column editable="false" title="S&#x1ec9; S&#x1ed1;" type="java.lang.Integer"/>
                 <Column editable="false" title="S&#x1ed1; Bu&#x1ed5;i" type="java.lang.Object"/>
                 <Column editable="false" title="Tr&#x1ea1;ng Th&#xe1;i" type="java.lang.String"/>
@@ -237,6 +238,11 @@
                   <Renderer/>
                 </Column>
                 <Column maxWidth="80" minWidth="80" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
                   <Renderer/>
